--- a/Cinnabsin/index-en.html
+++ b/Cinnabsin/index-en.html
@@ -115,12 +115,11 @@
             width: 100vw;
             z-index: 2;
         }
-
         .menu-li {
             margin-bottom: 15px;
         }
         .res-top {
-             margin: 40px 0 200px;
+            width: 100vw; margin: 40px 0 200px;
         }
 
         @media screen and (max-width: 1024px)
@@ -130,11 +129,11 @@
         .media-column {
             flex-direction: column;
         }
-        .res-top {
-             margin: 40px 0 100px;
-        }
         .media-wrap {
             flex-wrap: wrap;
+        }
+        .res-top {
+             margin: 40px 0 100px;
         }
         .disclamer {
             font-size: 20px; font-weight: bolder;
@@ -178,15 +177,15 @@
         }
             .text-el {
                 max-width: 90%;
-                padding: 10px;
+                padding: 0 40px;
             }
             .paz-mob {
-                width: 90%;
-                padding: 10px;
+                width: 73%;
+                padding: 0 40px;
             }
             .paz-text {
-                width: 95%;
-                padding: 10px;
+                width: 73%;
+                padding: 40px;
 
             }
             .media-width {
@@ -214,7 +213,8 @@
                 width: 90%;
             }
             .disc-mob-back {
-                width: 95%;
+                width: 78%;
+                padding: 0 40px;
             }
             .comp-1 {
                 position: initial;margin: 20px;margin-top: 80px;left: 90px; top: 130px;z-index: 1;border: 2px solid rgb(139, 139, 139); border-radius: 50%; height: 135px; width: 135px; background-image: url('./images/gidrastis.jpg'); background-position: center;background-size: cover; background-repeat: no-repeat;
@@ -250,8 +250,8 @@
 <div class="mobile-menu">
     <div class="header">
 
-        <span href="#block-0" style="text-transform: uppercase; cursor: pointer; font-family: sans-serif; font-weight: bold;">Cinnabsin</span>
-        <button on="tap:sidebar.toggle" class="headerMenu" style="width: 20px; height: 20px;margin-right: 10px; border: none; background-image: url('./images/1.svg')">
+        <span href="#block-0" style="text-transform: uppercase; cursor: pointer; font-family: sans-serif; font-weight: bold; padding-left: 35px;">Cinnabsin</span>
+        <button on="tap:sidebar.toggle" class="headerMenu" style="width: 20px; height: 20px;margin-right: 20px; border: none; background-image: url('./images/1.svg')">
 
         </button>
 
@@ -371,7 +371,7 @@
 <div style="position: absolute;height: 100vh;margin-top: -10vh;" >
     <a name="block-1"></a>
 </div>
-    <p style="max-width: 1200px; margin: auto; font-size: 25px; text-align: center; font-family: sans-serif;"><span style="font-weight: bold;">Cinnabsin </span> - is a natural complex medicine that harmoniously combines 4 pharmacological active natural components</p>
+    <p style="max-width: 1200px; margin: auto; font-size: 25px; text-align: center; font-family: sans-serif; padding: 0 40px;"><span style="font-weight: bold;">Cinnabsin </span> - is a natural complex medicine that harmoniously combines 4 pharmacological active natural components</p>
 
 
 
@@ -393,7 +393,7 @@
 <div style="position: absolute;height: 100vh;margin-top: -10vh;" >
     <a name="block-2"></a>
 </div>
-<p style="max-width: 1200px; margin: auto; font-size: 25px; text-align: center; font-family: sans-serif;"><span style="font-weight: bold;">Cinnabsin </span> - acts on the main links in the development of rhinitis and sinusitis</p>
+<p style="max-width: 1200px; margin: auto; font-size: 25px; text-align: center; font-family: sans-serif; padding: 0 40px;"><span style="font-weight: bold;">Cinnabsin </span> - acts on the main links in the development of rhinitis and sinusitis</p>
 <div style="width: 100vw; margin-top: 50px;">
     <div class="mob-column" style="display: flex; justify-content: space-around; max-width: 1200px; margin: auto;">
         <div class="text-el" style="border-right: 1px solid #ebebeb;  padding-right: 20px;">
@@ -451,8 +451,8 @@
 </div>
 <p style="max-width: 1200px; margin: auto; font-size: 25px; text-align: center; font-family: sans-serif;">How to use   <span style="font-weight: bold;">Cinnabsin</span></p>
 <div style="width: 100vw; margin: 50px 0;">
-    <p  style="max-width: 1200px; margin: auto; margin-bottom: 30px; text-align: center; font-family: sans-serif;">Take the tablets 30 minutes before meals or 30 minutes after meals, allowing them to slowly dissolve in the mouth. Children under 3 years of age are advised to dissolve the tablet in a small amount of water (for example, in a teaspoon) for ease of use. </p>
-    <div style="display: flex; justify-content: space-between; max-width: 1200px; margin: auto;">
+    <p  style="max-width: 1200px; margin: auto; margin-bottom: 30px; text-align: center; font-family: sans-serif; padding: 0 40px;">Take the tablets 30 minutes before meals or 30 minutes after meals, allowing them to slowly dissolve in the mouth. Children under 3 years of age are advised to dissolve the tablet in a small amount of water (for example, in a teaspoon) for ease of use. </p>
+    <div style="display: flex; justify-content: space-between; max-width: 1200px; margin: auto; padding: 0 20px;">
         <div class="media-column" style="width: 100%;display: flex; justify-content: space-between">
             <div class="how-width" style="display: flex; flex-direction: column; align-items: center; padding: 20px; border-radius: 5px;">
                 <div style="width:114px;height: 114px;margin-bottom: 20px;background-image: url('./images/26.jpg'); background-position: center;background-size: cover; background-repeat: no-repeat;"></div>
@@ -601,7 +601,7 @@
         <div style="width: 200px; height: 100px;border-radius: 10px;box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);margin-bottom: 20px;background-image: url('./images/logo-social.png'); background-position: center;background-size: cover; background-repeat: no-repeat;"></div>
     </div>
 </div>
-<div class="disc-mob-back" style=" padding: 50px 10px;background-color: #f8f9fa;">
+<div class="disc-mob-back" style="background-color: #f8f9fa;">
     <div style="display: flex; flex-direction: column;  max-width: 1200px; margin: auto; color: rgb(108,117,125);font-family: sans-serif;">
         <p style="text-align: center; font-size: 28px;">Cinnabsin</p>
 <!--        <p style="text-align: center; font-size: 28px;">Эксклюзивный дистрибьютор: ПрАТ «Натурфарм» ул. Лесная-->
