--- a/Cinnabsin/index.html
+++ b/Cinnabsin/index.html
@@ -177,15 +177,15 @@
         }
             .text-el {
                 max-width: 90%;
-                padding: 10px;
+                padding: 0 40px;
             }
             .paz-mob {
-                width: 90%;
-                padding: 10px;
+                width: 73%;
+                padding: 0 40px;
             }
             .paz-text {
-                width: 95%;
-                padding: 10px;
+                width: 73%;
+                padding: 40px;
 
             }
             .media-width {
@@ -213,7 +213,8 @@
                 width: 90%;
             }
             .disc-mob-back {
-                width: 95%;
+                width: 78%;
+                padding: 0 40px;
             }
             .comp-1 {
                 position: initial;margin: 20px;margin-top: 80px;left: 90px; top: 130px;z-index: 1;border: 2px solid rgb(139, 139, 139); border-radius: 50%; height: 135px; width: 135px; background-image: url('./images/gidrastis.jpg'); background-position: center;background-size: cover; background-repeat: no-repeat;
@@ -249,8 +250,8 @@
 <div class="mobile-menu">
     <div class="header">
 
-        <span href="#block-0" style="cursor: pointer; font-family: sans-serif; font-weight: bold;">ЦИННАБСИН</span>
-        <button on="tap:sidebar.toggle" class="headerMenu" style="width: 20px; height: 20px;margin-right: 10px; border: none; background-image: url('./images/1.svg')">
+        <span href="#block-0" style="cursor: pointer; font-family: sans-serif; font-weight: bold; padding-left: 35px;">ЦИННАБСИН</span>
+        <button on="tap:sidebar.toggle" class="headerMenu" style="width: 20px; height: 20px;margin-right: 20px; border: none; background-image: url('./images/1.svg')">
 
         </button>
 
@@ -370,7 +371,7 @@
 <div style="position: absolute;height: 100vh;margin-top: -10vh;" >
     <a name="block-1"></a>
 </div>
-    <p style="max-width: 1200px; margin: auto; font-size: 25px; text-align: center; font-family: sans-serif;"><span style="font-weight: bold;">Циннабсин</span> - натуральный
+    <p style="max-width: 1200px; margin: auto; font-size: 25px; text-align: center; font-family: sans-serif; padding: 0 40px;"><span style="font-weight: bold;">Циннабсин</span> - натуральный
         комплексный препарат, гармонично сочетает в себе
         4 фармакологических активных природных компонента</p>
 
@@ -394,7 +395,7 @@
 <div style="position: absolute;height: 100vh;margin-top: -10vh;" >
     <a name="block-2"></a>
 </div>
-<p style="max-width: 1200px; margin: auto; font-size: 25px; text-align: center; font-family: sans-serif;"><span style="font-weight: bold;">Циннабсин</span> - действует на основные
+<p style="max-width: 1200px; margin: auto; font-size: 25px; text-align: center; font-family: sans-serif; padding: 0 40px;"><span style="font-weight: bold;">Циннабсин</span> - действует на основные
     звенья  развития насморка и гайморита</p>
 <div style="width: 100vw; margin-top: 50px;">
     <div class="mob-column" style="display: flex; justify-content: space-around; max-width: 1200px; margin: auto;">
@@ -455,9 +456,9 @@
 <div style="position: absolute;height: 100vh;margin-top: -10vh;" >
     <a name="block-3"></a>
 </div>
-<p style="max-width: 1200px; margin: auto; font-size: 25px; text-align: center; font-family: sans-serif;">Как принимать <span style="font-weight: bold;">Циннабсин</span></p>
+<p style="max-width: 1200px; margin: auto; font-size: 25px; text-align: center; font-family: sans-serif;padding: 0 40px;">Как принимать <span style="font-weight: bold;">Циннабсин</span></p>
 <div style="width: 100vw; margin: 50px 0;">
-    <p  style="max-width: 1200px; margin: auto; margin-bottom: 30px; text-align: center; font-family: sans-serif;">Таблетки принимать за 30 минут до
+    <p  style="max-width: 1200px; margin: auto; margin-bottom: 30px; text-align: center; font-family: sans-serif;padding: 0 40px;">Таблетки принимать за 30 минут до
         еды или через 30 минут после еды, давая им медленно раствориться во рту.
         Детям в возрасте до 3-х лет рекомендуется для удобства применения растворять таблетку в
         небольшом
@@ -620,7 +621,7 @@
         <div style="width: 200px; height: 100px;border-radius: 10px;box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);margin-bottom: 20px;background-image: url('./images/logo-social.png'); background-position: center;background-size: cover; background-repeat: no-repeat;"></div>
     </div>
 </div>
-<div class="disc-mob-back" style=" padding: 50px 10px;background-color: #f8f9fa;">
+<div class="disc-mob-back" style="background-color: #f8f9fa;">
     <div style="display: flex; flex-direction: column;  max-width: 1200px; margin: auto; color: rgb(108,117,125);font-family: sans-serif;">
         <p style="text-align: center; font-size: 28px;">ЦИННАБСИН</p>
         <p style="text-align: center; font-size: 28px;">Эксклюзивный дистрибьютор: ПрАТ «Натурфарм» ул. Лесная
