--- a/Cinnabsin/index.html
+++ b/Cinnabsin/index.html
@@ -133,6 +133,8 @@
             flex-wrap: wrap;
         }
         .res-top {
+        	width: 78vw;
+            padding: 0 40px;
              margin: 40px 0 100px;
         }
         .disclamer {
