--- a/Cinnabsin/index-en.html
+++ b/Cinnabsin/index-en.html
@@ -139,6 +139,7 @@
         }
         .disclamer {
             font-size: 20px; font-weight: bolder;
+            padding-bottom: 40px;
         }
             .mobile-menu {
                 height: 40px;
@@ -215,7 +216,7 @@
                 width: 90%;
             }
             .disc-mob-back {
-                width: 78%;
+                width: 80%;
                 padding: 0 40px;
             }
             .comp-1 {
