--- a/Cinnabsin/index.html
+++ b/Cinnabsin/index.html
@@ -466,7 +466,7 @@
         Детям в возрасте до 3-х лет рекомендуется для удобства применения растворять таблетку в
         небольшом
         количестве воды (например, в чайной ложке).</p>
-    <div style="display: flex; justify-content: space-between; max-width: 1200px; margin: auto;">
+    <div style="display: flex; justify-content: space-between; max-width: 1200px; margin: auto; padding: 0 20px;">
         <div class="media-column" style="width: 100%;display: flex; justify-content: space-between">
             <div class="how-width" style="display: flex; flex-direction: column; align-items: center; padding: 20px; border-radius: 5px;">
                 <div style="width:114px;height: 114px;margin-bottom: 20px;background-image: url('./images/26.jpg'); background-position: center;background-size: cover; background-repeat: no-repeat;"></div>
