--- a/influcid-LT/index.html
+++ b/influcid-LT/index.html
@@ -15,30 +15,31 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/plugins/debug.addIndicators.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
     <script src="js/script.js"></script>
-    <script>
-var content = {
-    man: [
-      {
-      selector: 'body > header > div.main-img-container',
-      content: '<img src= "/upload/medialibrary/f47/influcid_main_02_first_desctop_AM.jpg">'
-      }
-    ]
-};
+  <script>
+    var content = {
+      man: [
+        {
+          selector: 'body > header > div.main-img-container',
+          content: '<div class="main-img-container_utm-man" ></div>'
+        }
+      ]
+    };
 
-var selector = 'body > header > div.main-img-container'; 
- 
-function replacer(content) {
-    var utm = '/?utm_cover=man'; 
-    if (utm in content) {
+    var selector = 'body > header > div.main-img-container';
+    function replacer(content) {
+      var utm = /utm_replace=([^&]*)/g.exec(document.URL)[1];
+      if (utm in content) {
+        console.log(utm);
         for (i in content[utm]) {
           document.querySelector(content[utm][i]['selector']).innerHTML=content[utm][i]['content'];
         };
-    } else {
+      } else {
         console.log('Каталог контента не имеет такой utm метки');
+      };
     };
-};
-replacer(content);
-</script>
+    replacer(content);
+  </script>
+
 </head>
 <body>
 	<header class="App-header">
@@ -77,7 +78,9 @@ replacer(content);
 
           </div>
         </div>
-        <div class="main-img-container"></div>
+        <div class="main-img-container">
+          <div class="main-img-container_utm" ></div>
+        </div>
         <a name="block-1"></a>
         <p>
           <b>Peršalai?</b> Tavo pasirinkimas. <b>Influcid</b>
