--- a/influcid/index.html
+++ b/influcid/index.html
@@ -15,6 +15,30 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/plugins/debug.addIndicators.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
     <script src="js/script.js"></script>
+  <script>
+    var content = {
+      man: [
+        {
+          selector: 'body > header > div.main-img-container',
+          content: '<div class="main-img-container_utm-man" ></div>'
+        }
+      ]
+    };
+
+    var selector = 'body > header > div.main-img-container';
+    function replacer(content) {
+      var utm = /utm_replace=([^&]*)/g.exec(document.URL)[1];
+      if (utm in content) {
+        console.log(utm);
+        for (i in content[utm]) {
+          document.querySelector(content[utm][i]['selector']).innerHTML=content[utm][i]['content'];
+        };
+      } else {
+        console.log('Каталог контента не имеет такой utm метки');
+      };
+    };
+    replacer(content);
+  </script>
 </head>
 <body>
     <!-- <div class="alert-license">
@@ -64,7 +88,9 @@
 
       <a class="fixed-link" href="https://liki24.com/index.php?route=checkout%2Fcustom_cart&cart_id=57214&utm_source=inflyucid-60&utm_medium=referral&utm_campaign=inflyucid">замовити доставку</a>
 
-        <div class="main-img-container"></div>
+        <div class="main-img-container">
+          <div class="main-img-container_utm" ></div>
+        </div>
         <a name="block-1"></a>
         <p>
           <b>Вiрус?</b> Вибiр за тобою. <b>Iнфлюцид</b>
