--- a/prospan-MD/index.html
+++ b/prospan-MD/index.html
@@ -20,14 +20,14 @@
     <div class="outer-navigation-container">
         <div class="navigation-container">
             <a class="logo-container" href="#top"></a>
-            <a class="where-to-buy-mob" target="_blank" href="https://tabletka.by/search?request=%D0%BF%D1%80%D0%BE%D1%81%D0%BF%D0%B0%D0%BD">Unde procuri</a>
+            <a class="where-to-buy-mob" target="_blank" href="">Unde procuri</a>
             <div class="navigation-menu">
                 <a class="navmenu" href="#block-1" >Avantaje</a>
                 <a class="navmenu" href="#block-2">Compoziție și acțiune</a>
                 <a class="navmenu" href="#block-3">Cum se administrează</a>
                 <a class="navmenu" href="#block-4">Informații utile</a>
 
-                <a class=" where-to-buy" target="_blank" href="https://tabletka.by/search?request=%D0%BF%D1%80%D0%BE%D1%81%D0%BF%D0%B0%D0%BD">Unde procuri</a>
+                <a class=" where-to-buy" target="_blank" href="">Unde procuri</a>
 <!--                <a class="lang lang-dop"><b>RU</b></a>-->
 <!--                <a class="lang" href=""><p>EN</p>-->
 <!--                </a>-->
