--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 			<a href="prospan-int/index.html">prospan-int</a>
 			<a href="Cinnabsin/index.html">Cinnabsin</a>
 			<a href="prospan-MD/index.html">prospan-MD</a>
+			<a href="Cinnabsin-by/index.html">Cinnabsin-BY</a>
 			
 		</section>
 	</main>
@@ -236,6 +237,9 @@
 	}
 	a:nth-child(48)::before {
 		background: url("./prospan-MD/logo.svg")no-repeat center / contain;
+	}
+	a:nth-child(49)::before {
+		background: url("./Cinnabsin-by/logo.svg")no-repeat center / contain;
 	}
 </style>
 
