--- a/Cinnabsin-by/index.html
+++ b/Cinnabsin-by/index.html
@@ -254,11 +254,7 @@
     <div class="header">
 
         <span href="#block-0" style="cursor: pointer; font-family: sans-serif; font-weight: bold; padding-left: 35px;">ЦИННАБСИН</span>
-        <a style="font-family: sans-serif;" target="_blank" href="https://tabletka.by/search?request= 
-
-%D0%A6%D0%B8%D0%BD%D0%BD%D0%B0%D0% 
-
-B1%D1%81%D0%B8%D0%BD " role="button">Где купить</a>
+        <a style="font-family: sans-serif;" target="_blank" href="https://tabletka.by/search?request=%D1%86%D0%B8%D0%BD%D0%BD%D0%B0%D0%B1%D1%81%D0%B8%D0%BD" role="button">Где купить</a>
         <button on="tap:sidebar.toggle" class="headerMenu" style="width: 20px; height: 20px;margin-right: 40px; border: none; background-image: url('./images/1.svg')">
 
         </button>
@@ -280,11 +276,7 @@ B1%D1%81%D0%B8%D0%BD " role="button">Где купить</a>
                         <a  href="#block-3" role="button">Как принимать</a>
                     </li>
                     <li class="menu-li">
-                        <a target="_blank" href="https://tabletka.by/search?request= 
-
-%D0%A6%D0%B8%D0%BD%D0%BD%D0%B0%D0% 
-
-B1%D1%81%D0%B8%D0%BD " role="button">Где купить</a>
+                        <a target="_blank" href="https://tabletka.by/search?request=%D1%86%D0%B8%D0%BD%D0%BD%D0%B0%D0%B1%D1%81%D0%B8%D0%BD" role="button">Где купить</a>
                     </li>
                     <li class="menu-li">
                         <!-- <a  href="./index-en.html" role="button">en</a> -->
@@ -340,11 +332,7 @@ B1%D1%81%D0%B8%D0%BD " role="button">Где купить</a>
                 <a  href="#block-3" role="button">Как принимать</a>
             </li>
             <li style="margin-right: 20px;">
-                <a target="_blank" href="https://tabletka.by/search?request= 
-
-%D0%A6%D0%B8%D0%BD%D0%BD%D0%B0%D0% 
-
-B1%D1%81%D0%B8%D0%BD " role="button">Где купить</a>
+                <a target="_blank" href="https://tabletka.by/search?request=%D1%86%D0%B8%D0%BD%D0%BD%D0%B0%D0%B1%D1%81%D0%B8%D0%BD" role="button">Где купить</a>
             </li>
         </ul>
     </nav>
@@ -541,14 +529,8 @@ B1%D1%81%D0%B8%D0%BD " role="button">Где купить</a>
                                 <div class="pill"></div>
                                 <div class="pill"></div>
                                 <div class="pill"></div>
-                                <div class="pill"></div>
-                                <div class="pill"></div>
-                                <div class="pill"></div>
                             </div>
                             <div style="display: flex; justify-content: center;margin: 20px 0;">
-                                <div class="pill"></div>
-                                <div class="pill"></div>
-                                <div class="pill"></div>
                                 <div class="pill"></div>
                                 <div class="pill"></div>
                                 <div class="pill"></div>
@@ -559,11 +541,6 @@ B1%D1%81%D0%B8%D0%BD " role="button">Где купить</a>
                             <p style="font-family: sans-serif;text-align: center;">
                                 (По 1 таблетке каждый час)<br>до улучшения состояния
                             </p>
-                            <div style="display: flex; justify-content: center;margin: 20px 0;">
-                                <div class="pill"></div>
-                                <div class="pill"></div>
-                                <div class="pill"></div>
-                            </div>
                             <div style="display: flex; justify-content: center;margin: 20px 0;">
                                 <div class="pill"></div>
                                 <div class="pill"></div>
