--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 			<a href="Cinnabsin/index.html">Cinnabsin</a>
 			<a href="prospan-MD/index.html">prospan-MD</a>
 			<a href="Cinnabsin-by/index.html">Cinnabsin-BY</a>
+			<a href="Cinnabsin-RU/index.html">Cinnabsin-RU</a>
 			
 		</section>
 	</main>
@@ -240,6 +241,9 @@
 	}
 	a:nth-child(49)::before {
 		background: url("./Cinnabsin-by/logo.svg")no-repeat center / contain;
+	}Cinnabsin-RU
+	a:nth-child(50)::before {
+		background: url("./Cinnabsin-RU/logo.svg")no-repeat center / contain;
 	}
 </style>
 
