--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 			<a href="prospan-MD/index.html">prospan-MD</a>
 			<a href="Cinnabsin-by/index.html">Cinnabsin-BY</a>
 			<a href="Cinnabsin-RU/index.html">Cinnabsin-RU</a>
+			<a href="Cinnabsin-UZ/index.html">Cinnabsin-UZ</a>
 			
 		</section>
 	</main>
@@ -244,6 +245,9 @@
 	}
 	a:nth-child(50)::before {
 		background: url("./Cinnabsin-RU/logo.svg")no-repeat center / contain;
+	}
+	a:nth-child(51)::before {
+		background: url("./Cinnabsin-UZ/logo.svg")no-repeat center / contain;
 	}
 </style>
 
